# llvm-yx-callobfuscator

./: .gitignore  CMakeLists.txt  README.md
.vscode_config/: c_cpp_properties.json  settings.json
CallObfuscatorHelpers/: CMakeLists.txt
CallObfuscatorHelpers/headers/callDispatcher/: callDispatcher.h
CallObfuscatorHelpers/headers/callDispatcher/asm/: callDispatcher.x64.hasm
CallObfuscatorHelpers/headers/common/: common.h  commonUtils.h  debug.h
CallObfuscatorHelpers/headers/common/asm/: common.x64.hasm
CallObfuscatorHelpers/headers/common/wintypes/: typedefs.h
CallObfuscatorHelpers/headers/pe/: peUtils.h
CallObfuscatorHelpers/headers/pe/unwind/: unwindUtils.h
CallObfuscatorHelpers/headers/stackSpoof/: stackSpoof.h
CallObfuscatorHelpers/headers/stackSpoof/asm/: stackSpoofHelpers.x64.hasm
CallObfuscatorHelpers/headers/syscalls/: syscalls.h
CallObfuscatorHelpers/source/callDispatcher/: callDispatcher.c
CallObfuscatorHelpers/source/callDispatcher/asm/: callDispatcher.x64.asm
CallObfuscatorHelpers/source/common/: commonUtils.c
CallObfuscatorHelpers/source/pe/: peUtils.c
CallObfuscatorHelpers/source/pe/unwind/: unwindUtils.c
CallObfuscatorHelpers/source/stackSpoof/: stackSpoof.c
CallObfuscatorHelpers/source/stackSpoof/asm/: stackSpoofHelper.x64.asm
CallObfuscatorHelpers/source/syscalls/: syscalls.c
CallObfuscatorPlugin/: CMakeLists.txt
CallObfuscatorPlugin/headers/: CallObfuscator.h  CallObfuscatorPass.h
CallObfuscatorPlugin/source/: CallObfuscator.cpp  CallObfuscatorPass.cpp  CallObfuscatorPluginRegister.cpp
example/: callobfuscator.conf  makefile_example
example/headers/: utils.h
example/source/: main.c  utils.c
